--- a/requirements.txt
+++ b/requirements.txt
@@ -5,30 +5,38 @@ beautifulsoup4==4.12.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.2.0
+cycler==0.12.1
 dill==0.3.7
 docplex==2.25.236
 fastapi==0.104.1
 fastdtw==0.3.4
+fonttools==4.46.0
 frozendict==2.3.9
 h11==0.14.0
 html5lib==1.1
 httptools==0.6.1
 idna==3.5
 inflection==0.5.1
+kiwisolver==1.4.5
 lxml==4.9.3
+matplotlib==3.8.2
 more-itertools==10.1.0
 mpmath==1.3.0
 multitasking==0.0.11
 Nasdaq-Data-Link==1.0.4
 networkx==3.2.1
 numpy==1.26.2
+packaging==23.2
 pandas==2.1.3
 pbr==6.0.0
 peewee==3.17.0
+Pillow==10.1.0
 ply==3.11
 psutil==5.9.6
 pydantic==2.5.2
 pydantic_core==2.14.5
+pyparsing==3.1.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
