--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ beautifulsoup4==4.12.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
-#contourpy==1.2.0
+contourpy==1.1.0
 cycler==0.12.1
 dill==0.3.7
 docplex==2.25.236
@@ -20,7 +20,7 @@ idna==3.5
 inflection==0.5.1
 kiwisolver==1.4.5
 lxml==4.9.3
-matplotlib==3.8.2
+matplotlib==3.7.4
 more-itertools==10.1.0
 mpmath==1.3.0
 multitasking==0.0.11
